# vite-minimal-webrtc

./: package-lock.json  package.json  tsconfig.json
matchbox_client/: Cargo.toml
matchbox_client/src/: lib.rs
matchbox_server/: Cargo.toml
src/: connector.ts  main.ts
