[package]
name = "matchbox_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
matchbox_socket = "0.7"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
log = { version = "0.4", default-features = false }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4.29"
wasm-bindgen = "0.2"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
